@@ -364,7 +364,7 @@ public class RefactoringWizardDialog2 extends Dialog implements IWizardContainer
 	
 	private void saveEnableStateAndSet(Control w, Map h, String key, boolean enabled) {
 		if (w != null) {
-			h.put(key, new Boolean(w.getEnabled()));
+			h.put(key, Boolean.valueOf(w.getEnabled()));
 			w.setEnabled(enabled);
 		}
 	}
